# survey

./: docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Caddyfile  Dockerfile  pnpm-lock.yaml
frontend/src/: App.vue
frontend/src/components/: SurveyGenerator.vue
