[package]
name = "survey"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = "0.7.9"
dashmap = "6.1.0"
log = "0.4.22"
once_cell = "1.20.2"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["serde_derive", "std"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tracing-subscriber = "0.3.18"
